@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 28-02-2006 added: Control.IsVisible(id) visibility condition.
  - 28-02-2006 fixed: Play DVD button on home wouldn't work for the first few seconds after it appeared.
  - 28-02-2006 changed: Screensaver will now kick in if a modal dialog is onscreen.
  - 28-02-2006 added: A little more exception handling to a couple of program database functions.
